# lsm-hand-tracker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  Makefile  README.md  mlruns  pyproject.toml  render.yaml
app/backend/: server.py
app/frontend/: package-lock.json  package.json
app/frontend/src/assets/: camera-up.astro  hand-click.astro  photo-up.astro
app/frontend/src/components/: Button.astro  CameraOptions.astro  ControlPanel.astro  Footer.astro  Header.astro  Hero.astro  ImageCarousel.astro  Webcam.astro
app/frontend/src/layouts/: Layout.astro
app/frontend/src/pages/: about.astro  app.astro  index.astro
app/frontend/src/scripts/: image-processing.js  video-processing.js
app/frontend/src/styles/: global.css
data/metadata/: gestures_flat.csv
data/processed/metadata/: gestures_flat.csv
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/135530300002090884/f9adbed1f0864a76acc9c3551b49f0ad/: meta.yaml
models/: feature_pipeline.joblib
notebooks/: Baseline.ipynb  EDA.ipynb  alternative_models.ipynb  capture_images.ipynb  characteristics_engineering.ipynb  final_model.ipynb  generate_metadata.ipynb  mediapipe_new_api.ipynb  mediapipe_new_api_simple.ipynb
scripts/: capturar_gestos_completo.py  capture_images.py  convert_json_to_csv.py  features.py  generate_metada.py  generate_metadata.py  path_config.py  pipeline.py  preprocessing.py  test_video_hand_detector_old_api.py  training.py  training_pipeline.py  transform.py
src/: main.py
src/lsm_hand_tracker/: __init__.py  cleaning.py  data_extraction.py  features.py  json_to_csv.py  main.py  metadata.py  model.py  path_config.py  pipeline.py  training.py  training_pipeline.py
src/lsm_hand_tracker/processing/: cleaning.py  data_extraction.py  features.py  flatten.py  image_loader.py  transformations.py
src/lsm_hand_tracker/utils/: path_config.py
(+115 files in other folders)
