[project]
name = "mexican-sign-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "notebook>=7.4.0",
    "python-dotenv>=1.1.0",
]
