[project]
name = "mexican-sign-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "missingno>=0.5.2",
    "notebook>=7.4.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.9",
    "tabulate>=0.9.0",
]
